# ci_pipeline_cmake_meets_python

./: CMakeLists.txt  main.py
.github/workflows/: test.yml
